JDK11 uptime and uptimemillis handling.