@@ -12,7 +12,6 @@
  *********************************************************************************************************************/
 package org.eclipselabs.garbagecat.domain.jdk.unified;
 
-import org.eclipselabs.garbagecat.domain.LogEvent;
 import org.eclipselabs.garbagecat.domain.ThrowAwayEvent;
 import org.eclipselabs.garbagecat.util.jdk.JdkRegEx;
 import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
@@ -23,31 +22,13 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * </p>
  * 
  * <p>
- * Information printed at the beginning of gc logging with <code>-Xlog:gc*:file=&lt;file&gt;:time,uptimemillis</code>.
+ * Information printed at the beginning of gc logging and between cycles.
  * </p>
  * 
  * <h3>Example Logging</h3>
  * 
  * <p>
- * 1) First observed format:
- * </p>
- * 
- * <pre>
- * [2019-02-05T14:47:31.091-0200][3ms] Humongous object threshold: 512K
- * [2019-02-05T14:47:31.091-0200][3ms] Max TLAB size: 512K
- * [2019-02-05T14:47:31.091-0200][3ms] GC threads: 4 parallel, 4 concurrent
- * [2019-02-05T14:47:31.091-0200][3ms] Reference processing: parallel
- * [2019-02-05T14:47:31.091-0200][3ms] Shenandoah heuristics: adaptive
- * [2019-02-05T14:47:31.091-0200][3ms] Initialize Shenandoah heap with initial size 1366294528 bytes
- * [2019-02-05T14:47:31.091-0200][3ms] Pacer for Idle. Initial: 26M, Alloc Tax Rate: 1.0x
- * [2019-02-05T14:47:31.092-0200][4ms] Safepointing mechanism: global-page poll
- * [2019-02-05T14:47:34.156-0200][3068ms] Trigger: Learning 1 of 5. Free (912M) is below initial threshold (912M)
- * [2019-02-05T14:47:34.156-0200][3068ms] Free: 912M (1824 regions), Max regular: 512K, Max humongous: 933376K, External frag: 1%, Internal frag: 0%
- * [2019-02-05T14:47:34.156-0200][3068ms] Evacuation Reserve: 65M (131 regions), Max regular: 512K
- * </pre>
- * 
- * <p>
- * 2) RHEL JDK11:
+ * 1) Header default (uptime,level,tags):
  * </p>
  * 
  * <pre>
@@ -62,65 +43,83 @@ import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
  * [0.007s][info][gc,ergo] Pacer for Idle. Initial: 1310K, Alloc Tax Rate: 1.0x
  * [0.007s][info][gc,init] Initialize Shenandoah heap: 32768K initial, 32768K min, 65536K max
  * [0.007s][info][gc,init] Safepointing mechanism: global-page poll
+ * 
+ * 
+ * </pre>
+ * 
+ * <p>
+ * 2) Header datestamp and milliseconds (time,millis):
+ * </p>
+ * 
+ * <pre>
+ * [2019-02-05T14:47:31.091-0200][3ms] Humongous object threshold: 512K
+ * [2019-02-05T14:47:31.091-0200][3ms] Max TLAB size: 512K
+ * [2019-02-05T14:47:31.091-0200][3ms] GC threads: 4 parallel, 4 concurrent
+ * [2019-02-05T14:47:31.091-0200][3ms] Reference processing: parallel
+ * [2019-02-05T14:47:31.091-0200][3ms] Shenandoah heuristics: adaptive
+ * [2019-02-05T14:47:31.091-0200][3ms] Initialize Shenandoah heap with initial size 1366294528 bytes
+ * [2019-02-05T14:47:31.091-0200][3ms] Pacer for Idle. Initial: 26M, Alloc Tax Rate: 1.0x
+ * [2019-02-05T14:47:31.092-0200][4ms] Safepointing mechanism: global-page poll*
+ * </pre>
+ * 
+ * <p>
+ * 3) Between cycles default (uptime,level,tags):
+ * 
+ * Note: Trigger is broken out to a separate event,
+ * {@link org.eclipselabs.garbagecat.domain.jdk.unified.ShenandoahTriggerEvent} ,for possible future analsysis.
+ * </p>
+ * 
+ * <pre>
+ * [0.635s][info][gc,ergo      ] Free: 47665K (189 regions), Max regular: 256K, Max humongous: 39680K, External frag: 17%, Internal frag: 1%
+ * [0.635s][info][gc,ergo      ] Evacuation Reserve: 3328K (13 regions), Max regular: 256K
+ * [0.635s][info][gc,ergo      ] Pacer for Idle. Initial: 1310K, Alloc Tax Rate: 1.0x
+ * [0.724s][info][gc           ] Trigger: Average GC time (20.65 ms) is above the time for allocation rate (400 MB/s) to deplete free headroom (8008K)
+ * [0.724s][info][gc,ergo      ] Free headroom: 11284K (free) - 3276K (spike) - 0B (penalties) = 8008K
+ * [0.724s][info][gc,ergo      ] Free: 11284K (46 regions), Max regular: 256K, Max humongous: 10496K, External frag: 7%, Internal frag: 4%
+ * [0.724s][info][gc,ergo      ] Evacuation Reserve: 3328K (13 regions), Max regular: 256K
  * </pre>
  * 
  * @author <a href="mailto:mmillson@redhat.com">Mike Millson</a>
  * 
  */
-public class GcInfoEvent implements UnifiedLogging, LogEvent, ThrowAwayEvent {
+public class GcInfoEvent implements UnifiedLogging, ThrowAwayEvent {
 
     /**
      * Regular expressions defining the logging.
      */
     private static final String REGEX[] = {
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\] Humongous object threshold: " + JdkRegEx.SIZE + "$",
+            "^" + UnifiedLogging.DECORATOR + " Humongous object threshold: " + JdkRegEx.SIZE + "$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\](\\[info\\]\\[gc,init\\])? Max TLAB size: " + JdkRegEx.SIZE + "$",
+            "^" + UnifiedLogging.DECORATOR + " Max TLAB size: " + JdkRegEx.SIZE + "$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\](\\[info\\]\\[gc,init\\])? GC threads: \\d parallel, \\d concurrent$",
+            "^" + UnifiedLogging.DECORATOR + " GC threads: \\d parallel, \\d concurrent$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\](\\[info\\]\\[gc,init\\])? Reference processing: parallel$",
+            "^" + UnifiedLogging.DECORATOR + " Reference processing: parallel$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\](\\[info\\]\\[gc,init\\])? Shenandoah heuristics: adaptive$",
+            "^" + UnifiedLogging.DECORATOR + " Shenandoah heuristics: adaptive$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\](\\[info\\]\\[gc,init\\])? Initialize Shenandoah heap( with initial size \\d{10} bytes|: "
+            "^" + UnifiedLogging.DECORATOR + " Initialize Shenandoah heap( with initial size \\d{10} bytes|: "
                     + JdkRegEx.SIZE + " initial, " + JdkRegEx.SIZE + " min, " + JdkRegEx.SIZE + " max)$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\](\\[info\\]\\[gc,ergo\\])? Pacer for Idle. Initial: " + JdkRegEx.SIZE
+            "^" + UnifiedLogging.DECORATOR + " Pacer for Idle. Initial: " + JdkRegEx.SIZE
                     + ", Alloc Tax Rate: \\d\\.\\dx$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\](\\[info\\]\\[gc,init\\])? Safepointing mechanism: global-page poll$",
+            "^" + UnifiedLogging.DECORATOR + " Safepointing mechanism: global-page poll$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\] Trigger: Learning \\d of \\d\\. Free \\(" + JdkRegEx.SIZE
-                    + "\\) is below initial threshold \\(" + JdkRegEx.SIZE + "\\)$",
+            "^" + UnifiedLogging.DECORATOR + " Free: " + JdkRegEx.SIZE + " \\(\\d{1,4} regions\\), Max regular: "
+                    + JdkRegEx.SIZE + ", Max humongous: " + JdkRegEx.SIZE
+                    + ", External frag: \\d%, Internal frag: \\d%$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\] Free: " + JdkRegEx.SIZE + " \\(\\d{1,4} regions\\), Max regular: " + JdkRegEx.SIZE
-                    + ", Max humongous: " + JdkRegEx.SIZE + ", External frag: \\d%, Internal frag: \\d%$",
+            "^" + UnifiedLogging.DECORATOR + " Evacuation Reserve: " + JdkRegEx.SIZE
+                    + " \\(\\d{1,3} regions\\), Max regular: " + JdkRegEx.SIZE + "$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\] Evacuation Reserve: " + JdkRegEx.SIZE + " \\(\\d{1,3} regions\\), Max regular: "
-                    + JdkRegEx.SIZE + "$",
+            "^" + UnifiedLogging.DECORATOR + " Regions: \\d{1,3} x " + JdkRegEx.SIZE + "$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\]\\[info\\]\\[gc,init\\] Regions: \\d{1,3} x " + JdkRegEx.SIZE + "$",
+            "^" + UnifiedLogging.DECORATOR + " Humongous object threshold: " + JdkRegEx.SIZE + "$",
             //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\]\\[info\\]\\[gc,init\\] Humongous object threshold: " + JdkRegEx.SIZE + "$",
-            //
-            "^(\\[" + JdkRegEx.DATESTAMP + "\\])?\\[(" + JdkRegEx.TIMESTAMP + "s|" + JdkRegEx.TIMESTAMP_MILLIS
-                    + ")\\]\\[info\\]\\[gc     \\] Heuristics ergonomically sets "
-                    + "(-XX:\\+ExplicitGCInvokesConcurrent|-XX:\\+ShenandoahImplicitGCInvokesConcurrent)$"
+            "^" + UnifiedLogging.DECORATOR + " Heuristics ergonomically sets (-XX:\\+ExplicitGCInvokesConcurrent|"
+                    + "-XX:\\+ShenandoahImplicitGCInvokesConcurrent)$"
             //
     };
 
